2011-02-10  Tim Waugh  <twaugh@redhat.com>  

	* src/interdiff.c (apply_patch): Don't put absolute filenames
	in the input to patch.

2011-01-04  Tim Waugh  <twaugh@redhat.com>

	* src/util.c (xopen_unzip): Use correct exit status for
	"lsdiff -z nonexistentfile" (trac #16).

2009-08-10  Tim Waugh  <twaugh@redhat.com>

	* src/util.c (xtmpfile): Clean up temporary file (trac #12).
	Also free the memory allocated to hold its name.

2009-01-23  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.3.1.

2009-01-23  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (main): Provide GNU-style long names for all
	options (trac #6).
	* src/interdiff.c (main): Likewise.
	* doc/patchutils.xml: Updated.

2009-01-23  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (do_unified): Cope a little better with
	incomplete @@ lines.

2009-01-23  Tim Waugh  <twaugh@redhat.com>

	* src/rediff.c (adjust_offsets_and_copy): Keep the trailing text
	after @@ (trac #8).
	(removed_hunk): Likewise.

2009-01-21  Tim Waugh  <twaugh@redhat.com>

	* src/rediff.c (show_modified_hunk): If changes have been made
	outside the original diff, error out (trac #1).

2009-01-21  Tim Waugh  <twaugh@redhat.com>

	* tests/rediff2/run-test: New test case.

2009-01-21  Tim Waugh  <twaugh@redhat.com>

	* doc/patchutils.xml: Fixed typo (trac #7).

2009-01-21  Tim Waugh  <twaugh@redhat.com>

	* src/util.c (xtmpfile): New function.
	* src/interdiff.c (output_delta): Use it.
	(take_diff): Likewise.
	(interdiff): Likewise.
	* src/diff.c (do_convert): Likewise.
	* src/filterdiff.c (do_unified): Likewise.
	(do_context): Likewise.
	* src/rediff.c (added_hunk): Likewise.
	(show_modified_hunk): Likewise.
	(rediff): Likewise.
	* src/util.c (xopen_seekable): Likewise.
	(xopen_unzip): Likewise.

	The tmpfile() function is not specified to use the TMPDIR
	environment variable.  We wrap it to make sure that TMPDIR is
	honoured (trac #3).

2008-07-28  Tim Waugh  <twaugh@redhat.com>
